My first Github Push

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <!--            MY ABOUT ME SECTION STARTS HERE-->
             <section id="aboutMe" class="mainWidth">
                 <aside class="asideLeft">
-                    <img src="images/damon.jpg" title="" alt="" />
+                    <img src="images/spyro.gif" title="" alt="" />
                 </aside>
                 <article class="articleHome">
                     <h2>Mr. Damon Thomas</h2>
